--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
             </h2>
             </div>
             <div class="one">
-                <a href="SUV.html"><img src="Pics\20230623033112_range_rover_sv_static.jpg"></a>
+                <a href="SUV.html"><img src="20230623033112_range_rover_sv_static.jpg"></a>
                 <h3>SUV</h3>
             </div>
             <div class="two">
