--- a/project.html
+++ b/project.html
@@ -23,7 +23,7 @@
                 <h3>LUXURY</h3>
             </div>
             <div class="three">
-                <a href="D:Sports.html"><img src="Mustang.jpeg"></a>
+                <a href="Sports.html"><img src="Mustang.jpeg"></a>
                 <h3>SPORTS</h3>
             </div>
             <div class="four">
